<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosjava_build_tools</name>
  <version>0.3.3</version>
  <description>
    Simple tools and catkin modules for rosjava development.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rosjava_build_tools</url>
  <url type="repository">https://github.com/ros-java/rosjava_build_tools</url>
  <url type="bugtracker">https://github.com/ros-java/rosjava_build_tools/issues</url>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <depend>ant</depend>
  <depend>java</depend>
  <exec_depend>catkin</exec_depend>
</package>
